[gd_scene load_steps=4 format=3 uid="uid://d1kb45i0c0ft0"]

[ext_resource type="Script" path="res://dev/NightTime/peter/Control.gd" id="1_8cfqn"]
[ext_resource type="Script" path="res://dev/NightTime/peter/ColorMenu.gd" id="3_kvirh"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_1j62r"]

[node name="Control" type="Control"]
layout_mode = 3
anchor_right = 1.00347
anchor_bottom = 1.0
offset_right = -4.0
offset_bottom = -5.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_8cfqn")

[node name="BackgroundColor" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.950039, 0.757095, 0.86505, 1)

[node name="TextEdit" type="TextEdit" parent="."]
visible = false
layout_mode = 1
anchors_preset = -1
anchor_top = -0.503
anchor_right = 0.426
offset_left = 16.0
offset_top = 405.944
offset_right = 61.248
offset_bottom = 620.0
rotation = -0.00331358

[node name="OpenFile" type="Button" parent="."]
layout_mode = 0
offset_left = 695.0
offset_top = 596.0
offset_right = 888.0
offset_bottom = 627.0
rotation = -0.00159431
text = "Open File
"

[node name="SaveFile" type="Button" parent="."]
layout_mode = 0
offset_left = 929.0
offset_top = 598.0
offset_right = 1122.0
offset_bottom = 629.0
rotation = -0.00159431
text = "Save File
"

[node name="FileDialog" type="FileDialog" parent="."]
title = "Open a File"
initial_position = 2
size = Vector2i(800, 500)
ok_button_text = "Open"
file_mode = 0
access = 2

[node name="SaveFileDialog" type="FileDialog" parent="."]
auto_translate_mode = 1
title = "Save File"
initial_position = 2
size = Vector2i(800, 500)
access = 2

[node name="MenuButtonFile" type="MenuButton" parent="."]
layout_mode = 0
offset_left = 909.0
offset_top = 15.0
offset_right = 1134.0
offset_bottom = 71.0
text = "File
"
alignment = 0

[node name="ColorMenu" type="NinePatchRect" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -164.0
offset_top = -228.5
offset_right = 164.0
offset_bottom = 228.5
grow_horizontal = 2
grow_vertical = 2
patch_margin_left = 20
patch_margin_top = 20
patch_margin_right = 20
patch_margin_bottom = 20
script = ExtResource("3_kvirh")

[node name="VBoxContainer" type="VBoxContainer" parent="ColorMenu"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -63.0
offset_top = -207.0
offset_right = 63.0
offset_bottom = -106.0
grow_horizontal = 2
grow_vertical = 0

[node name="CheckButton1" type="CheckButton" parent="ColorMenu/VBoxContainer"]
modulate = Color(0, 0, 0, 1)
layout_mode = 2
theme_override_colors/font_disabled_color = Color(0, 0, 0, 1)
theme_override_colors/font_hover_pressed_color = Color(1, 1, 1, 1)
theme_override_colors/font_focus_color = Color(1, 0, 0, 1)
theme_override_font_sizes/font_size = 20
theme_override_styles/focus = SubResource("StyleBoxEmpty_1j62r")
text = "COLOR #1
"

[node name="CheckButton2" type="CheckButton" parent="ColorMenu/VBoxContainer"]
modulate = Color(0, 0, 0, 1)
layout_mode = 2
theme_override_styles/focus = SubResource("StyleBoxEmpty_1j62r")
text = "COLOR #2
"

[node name="CheckButton3" type="CheckButton" parent="ColorMenu/VBoxContainer"]
modulate = Color(0, 0, 0, 1)
layout_mode = 2
theme_override_styles/focus = SubResource("StyleBoxEmpty_1j62r")
text = "COLOR #3
"

[node name="GridContainer" type="GridContainer" parent="ColorMenu"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -65.0
offset_top = 20.0
offset_right = 65.0
offset_bottom = 152.0
grow_horizontal = 2
theme_override_constants/h_separation = 45
theme_override_constants/v_separation = 45
columns = 3

[node name="Panel1" type="Panel" parent="ColorMenu/GridContainer"]
layout_mode = 2

[node name="ColorRect" type="ColorRect" parent="ColorMenu/GridContainer/Panel1"]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0
color = Color(0.397355, 0.1371, 0.588852, 1)

[node name="Panel2" type="Panel" parent="ColorMenu/GridContainer"]
layout_mode = 2

[node name="ColorRect" type="ColorRect" parent="ColorMenu/GridContainer/Panel2"]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0
color = Color(0.397355, 0.1371, 0.588852, 1)

[node name="Panel3" type="Panel" parent="ColorMenu/GridContainer"]
layout_mode = 2

[node name="ColorRect" type="ColorRect" parent="ColorMenu/GridContainer/Panel3"]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0
color = Color(0.397355, 0.1371, 0.588852, 1)

[node name="Panel4" type="Panel" parent="ColorMenu/GridContainer"]
layout_mode = 2

[node name="ColorRect" type="ColorRect" parent="ColorMenu/GridContainer/Panel4"]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0
color = Color(0.67731, 0.400464, 0.92069, 1)

[node name="Panel5" type="Panel" parent="ColorMenu/GridContainer"]
layout_mode = 2

[node name="ColorRect" type="ColorRect" parent="ColorMenu/GridContainer/Panel5"]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0
color = Color(0.67731, 0.400464, 0.92069, 1)

[node name="Panel6" type="Panel" parent="ColorMenu/GridContainer"]
layout_mode = 2

[node name="ColorRect" type="ColorRect" parent="ColorMenu/GridContainer/Panel6"]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0
color = Color(0.67731, 0.400464, 0.92069, 1)

[node name="Panel7" type="Panel" parent="ColorMenu/GridContainer"]
layout_mode = 2

[node name="ColorRect" type="ColorRect" parent="ColorMenu/GridContainer/Panel7"]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0
color = Color(0.840588, 0.718346, 0.973951, 1)

[node name="Panel8" type="Panel" parent="ColorMenu/GridContainer"]
layout_mode = 2

[node name="ColorRect" type="ColorRect" parent="ColorMenu/GridContainer/Panel8"]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0
color = Color(0.840588, 0.718346, 0.973951, 1)

[node name="Panel9" type="Panel" parent="ColorMenu/GridContainer"]
layout_mode = 2

[node name="ColorRect" type="ColorRect" parent="ColorMenu/GridContainer/Panel9"]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0
color = Color(0.840588, 0.718346, 0.973951, 1)

[node name="BocchiUwuCopy" type="Sprite2D" parent="."]
position = Vector2(1014, 432)
scale = Vector2(0.38117, 0.328154)

[connection signal="pressed" from="OpenFile" to="." method="_on_open_file_pressed"]
[connection signal="pressed" from="SaveFile" to="." method="_on_save_file_pressed"]
[connection signal="file_selected" from="FileDialog" to="." method="_on_file_dialog_file_selected"]
[connection signal="pressed" from="ColorMenu/VBoxContainer/CheckButton1" to="ColorMenu" method="_on_check_button_1_pressed"]
[connection signal="pressed" from="ColorMenu/VBoxContainer/CheckButton2" to="ColorMenu" method="_on_check_button_2_pressed"]
[connection signal="pressed" from="ColorMenu/VBoxContainer/CheckButton3" to="ColorMenu" method="_on_check_button_3_pressed"]
